2013-10-20  Frank Warmerdam  <warmerdam@pobox.com>

	* configure.in: Add C_WFLAGS support, in particular use
	-Wdeclaration-after-statement to warn about code that won't work
	with MSVC (#224).

	* src/cs2cs.c: Support -I when there is no +to projection.

	* src/PJ_ob_tran.c: Propogate ctx into sub-projection (#225).

2013-10-03  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_healpix.c: Fix healpix build on msvc. (#223)

2013-10-01  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: Upgraded to EPSG 8.2.

2013-07-21  Frank Warmerdam  <warmerdam@pobox.com>

	* src/proj_etmerc.c: Fix two errors in the n**5 coefficients.  Add 
	sixth order coefficients.  Fix rounding problems (#222)

2013-07-19  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_healpix.c: major update for polar scaling and parms (#219)

2013-07-12  Frank Warmerdam  <warmerdam@pobox.com>

	* src/geodesic.{c,h}: allow polygon vertices to be specified 
	incrementally for geodesic area (#221).

2013-07-08  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_calcofi.c: Add Cal Coop Ocean Fish Invest Lines/Stations
	projections (calcofi) (#135)

2013-07-02  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/testvarious, nad/tv_out.dist: add new robinson forward test,
	and backwards tests.

	* src/PJ_robin.c: Applied new coefficients supplied by Ed Campbell
	pretty much on faith. (#113)

2013-06-26  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_open_lib.c: change filename and access args to const.

2013-06-25  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/Makefile.am: add CH to pkgdata_DATA (#145).

	* src/PJ_putp3.c: Fix putp3p usage line to remove "no inv" (#167).

	* src/PJ_aitoff.c: note that aitoff and wintri projections have no
	inverse (#160, #168).

	* src/PJ_urm5.c: Note that there is no inverse, fix spelling of alpha
	in the short description (#169).

	* src/pj_ell_set.c: Ensure thread context is forwarded.

	* src/multistresstest.c: add windows support (#199)
